--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=OAuth2Login
+
+
+#database
+spring.datasource.url=jdbc:postgresql://localhost:5432/Oauth2Login
+spring.datasource.username=postgres
+spring.datasource.password=8080
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Optional: JPA/Hibernate properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+#security
+spring.security.user.name=user
+spring.security.user.password=pass
+spring.security.user.roles=USER,ADMIN
