working continue with github and getting data at profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.username=postgres
 spring.datasource.password=8080
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Optional: JPA/Hibernate properties
+#JPA/Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
@@ -15,3 +15,8 @@ spring.jpa.show-sql=true
 spring.security.user.name=user
 spring.security.user.password=pass
 spring.security.user.roles=USER,ADMIN
+
+#oauth2
+spring.security.oauth2.client.registration.github.client-id=Ov23lilGgD1rO755FtwA
+spring.security.oauth2.client.registration.github.client-secret=bb305c994e623270f758430d22e48c94f339b426
+spring.security.oauth2.client.registration.github.scope=read:user,user:email
